src/objects/Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit__c</fullName>
        <label>Credit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due__c</fullName>
        <label>Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund__c</fullName>
        <label>Refund</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Transaction</label>
    <nameField>
        <label>Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>